--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -4,7 +4,7 @@ Funtzioak programa txikiak dira programen barruan. Funtzio horrek pantailan agur
 
 ```python
 def agurra ():
-print "Kaixo"
+  print "Kaixo"
 ```
 
 Ikus daitekeenez, funtzio bat definitzeko, `def, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `osasuna' eta "()" parametroen zerrenda, kasu honetan hutsik dagoena.
@@ -15,7 +15,7 @@ Eta Pythonen estiloarekin jarraituz, funtzioaren barruan dagoen kodearen aurreti
 Funtzio hori definitu ondoren, funtzio hori erabiltzen dugun bakoitzean, funtzio horretan dagoen kodea exekutatuko da:
 
 ```python
-agurra ()
+agurra()
 ```
 
 Horrek erakutsiko du:
@@ -29,26 +29,26 @@ Kaixo
 Idatzi programa bat hiru emanaldirekin: egunak, arratsaldeak eta gauak. Bakoitzak agur desberdina egin behar du: "Egun on", "Arratsalde on" eta "Gabon", hurrenez hurren. Gehitu hiru funtzioetarako deiak.
 
 ```python
-def dias ():
-print ("Egun on")
+def egunak ():
+    print("Egun on")
 
-def tardes ():
-print ("Arratsalde on")
+def arratsaldeak ():
+    print("Arratsalde on")
 
-def noches ():
-print ("Gabon")
+def gauekoak ():
+    print("Gabon")
 
-egunak ()
-arratsaldez ()
-gauak ()
+egunak()
+arratsaldeak()
+gauekoak()
 ```
 
 Emaitza:
 
 ```console
-Egun on.
-Arratsalde on.
-Gau on.
+Egun on
+Arratsalde on
+Gabon
 ```
 
 ## Parametroak
@@ -58,15 +58,15 @@ Adibidez, norbait agurtzen duen funtzio bat sor dezakegu:
 
 ```python
 def saluda (pertsona):
-print ("Kaixo", pertsona)
+  print ("Kaixo", pertsona)
 ```
 
 Funtzioaren barruan, pertsonen balioa desberdina izango da deian ematen zaionaren arabera.
 Honela erabil liteke:
 
 ```python
-agur ("Neko") #pertsona izango da "Neko"
-agur ("Ada") #pertsona izango da "Ada"
+agur("Neko") #pertsona izango da "Neko"
+agur("Ada") #pertsona izango da "Ada"
 ```
 
 Hona hemen horren emaitza:
@@ -81,10 +81,10 @@ Kaixo Ada
 Idatz ezazu programa bat "laukia" izeneko funtzio batekin, eta parametro hau izango du: Funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
 
 ```python
-def cuadrado (a):
-print (a* a)
+def karratua(a):
+    print(a * a)
 
-karratua (3)
+karratua(3)
 ```
 
 Emaitza:
@@ -98,15 +98,15 @@ Emaitza:
 Funtzio baten parametroek lehenetsitako balioa izan dezakete. Hau da, balio jakin bat esleitu ahal zaie, eta deian parametro hori pasatzen ez bada, parametroak balio hori lehenetsiko du.
 
 ```python
-def agur (pertsona, batzuetan = 3):
-for i in range (batzuetan):
-print ("Kaixo", pertsona)
+def agur(pertsona, batzuetan = 3):
+  for i in range (batzuetan):
+    print ("Kaixo", pertsona)
 ```
 
 Honela deitzen bazaio:
 
 ```python
-agurtu ("Neko", 2)
+agurtu("Neko", 2)
 ```
 
 Pantailan ikusiko litzateke:
@@ -119,7 +119,7 @@ Kaixo Neko
 Aldiz, bigarren parametroa pasatzen ez badugu, `veces`ek lehenetsitako balioa hartuko du:
 
 ```python
-agurtu ("Bug")
+agurtu("Bug")
 ```
 
 Hau ikusiko litzateke:
@@ -137,12 +137,12 @@ Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun**** parametro guztia
 
 ```python
 def batu (* balioak):
-emaitza = 0
+  emaitza = 0
 
-for balioa in balioak:
-emaitza = emaitza + balioa
+  for balioa in balioak:
+    emaitza = emaitza + balioa
 
-erreturn emaitza
+  return emaitza
 ```
 
 Erreparatzen badiguzu, `baloreak 'parametroa zehaztu dugu, aurretik zenbaki bat jarrita. Horrekin esan nahi dizugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
@@ -159,15 +159,16 @@ batu (2, 45) # 47
 Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen batu izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
 
 ```python
-def batu (* hitzak):
-esaldia = "
+def batu(*hitza):
+    esaldia = ""
 
-for hitza in palabras:
-esaldia = esaldia + "" + hitza
+    for h in hitza:
+        esaldia = esaldia + " " + h
 
-return esaldia
+    return esaldia
 
-print ("Kaixo", "Zer", "Halakoa")
+
+print(batu("kaixo", "nola", "naiz"))
 ```
 
 Emaitza:
@@ -185,21 +186,21 @@ Adibidez, bi balioren batura kalkulatzen duen funtzio bat:
 
 ```python
 def suma (a, b):
-emaitza = a + b
-erreturn emaitza
+  emaitza = a + b
+  return emaitza
 ```
 
 Pixka bat laburtu daiteke zuzenean:
 
 ```python
 def suma (a, b):
-return a + b
+  return a + b
 ```
 
 Honela erabil liteke funtzioa:
 
 ```python
-print (batura (40, 2)) # 42
+print(batura(40, 2)) # 42
 ```
 
 Gauza pare bat hartu behar dituzu kontuan, honako honekin:
@@ -213,9 +214,9 @@ Idatzi programa bat "zatitu" izeneko funtzio batekin, eta jaso itzazu parametro 
 
 ```python
 def zatitu (a, b):
-return a/b
+  return a/b
 
-print (zatitu (32, 4))
+print(zatitu(32, 4))
 ```
 
 Emaitza:
@@ -228,12 +229,13 @@ Beste adibide bat, balio bat hainbat aldiz biderkatzen duen funtzio bat. Kopurua
 
 ```python
 def multiplika (kopurua, aldiz):
-if (batzuetan > 0):
-guztira = 1
-for i in range (batzuetan):
-guztira = guztira* kopurua
-LKse:
-return 0
+  if (batzuetan > 0):
+    guztira = 1
+    for i in range (batzuetan):
+      guztira = guztira * kopurua
+    return guztira
+  else:
+    return 0
 
 biderkadura (2, 3) # 8
 ```
@@ -242,11 +244,12 @@ Oharra: aurreko funtzioa argiago geratzen da horrela.
 
 ```python
 def multiplika (kopurua, aldiz):
-if (batzuetan < 1): return 0
+  if (batzuetan < 1): return 0
 
-guztira = 1
-for i in range (batzuetan):
-guztira = guztira* kopurua
+  guztira = 1
+  for i in range (batzuetan):
+    guztira = guztira* kopurua
+  return guztira # TODO CHECK
 ```
 
 ## Dei kabituak
@@ -255,22 +258,22 @@ Ez izan funtzio-deiei habia egiteko beldurrik. Oso gauza naturala da programazio
 Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugula eta sartutako zenbaki-ontzia itzultzen duela:
 
 ```python
-def lee zenbakia ():
-numero = input ("Idatzi zenbakia:")
-return int (zenbakia)
+def irakur_zenbakia ():
+  zenbakia = input("Idatzi zenbakia:")
+  return int(zenbakia)
 ```
 
 Demagun beste funtzio bat ere badugula zenbakiak kentzeko:
 
 ```python
-def restar (a, b)
-return a - b
+def kenketa (a, b)
+  return a - b
 ```
 
 Erabiltzaileari bi zenbaki eskatu eta kentzen dizkion programa bat egin nahi badugu, horrela egin genezake.
 
 ```python
-print (restar (leeNumero (), leeNumero ()))
+print (kenketa(irakur_zenbakia(), irakur_zenbakia()))
 ```
 
 Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu funtzio bati.
@@ -278,19 +281,19 @@ Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu 
 Funtzio horiek `irakurtzenZenbakia () ", balio batzuk itzuliko dituzte. Lehenengo "IrakurriZenbakia ()" deitu bezain laster, honela izango da:
 
 ```python
-print (kendu (5, irakurriZenbakia ()))
+print (kenketa(5,irakur_zenbakia ()))
 ```
 
-Eta gero, bigarrenari "IrakurriZenbakia ()" deitu ondoren:
+Eta gero, bigarrenari "irakur_zenbakia ()" deitu ondoren:
 
 ```python
-print (kendu (5, 2)
+print (kenketa(5, 2))
 ```
 
 Gero, kenketa egingo da eta balio bat itzuliko du:
 
 ```python
-print (3)
+print(3)
 ```
 
 Eta, azkenik, a print deituko da eta emaitza ikusiko dugu:
@@ -311,24 +314,25 @@ Eta bi zenbaki jaso eta horien arteko potentzia kalkulatzen duen beste funtzio b
 
 Bigarren funtzioari deitu behar diozu, parametro hauek kontuan hartuta:
 
-`potentzia (positiboa (-5), positiboa (4)``
+`potentzia (positiboa (-5), positiboa (4)`
 
 Oharra: ez erabili aurretik zeuden funtzioak.
 
 ```python
-def positiboa (balioa):
-if balioa < 0:
-return -balioa
+def positibo (balioa):
+    if balioa < 0:
+        return -balioa
 
-Itzuli balioa
+    return balioa
 
-def potentzia (1, 2 balorazioak):
-return valor1** valor2
 
-print (positiboa (-1))
-print (potentzia (2, 3))
-print (potentzia (positiboa (2), positiboa (4)))
-potentzia (positiboa (-5), positiboa (4))
+def berredura (balioa1, balioa2):
+    return balioa1 ** balioa2
+
+print(positibo(-1))
+print(berredura(2, 3))
+print(berredura(positibo(2), positibo(4)))
+berredura(positibo(-5), positibo(4))
 ```
 
 Emaitza:
@@ -359,10 +363,10 @@ Zure programak zerbait egin behar badu hainbat aldiz, kodea behar beste aldiz er
 ```python
 dato = "
 
-while dato = = "":
-dato = input ("Mesedez, sartu datu bat:")
-if dato = = "":
-print ("Datua hutsik dago!)
+while dato  = "":
+  dato = input ("Mesedez, sartu datu bat:")
+  if dato == "":
+  print ("Datua hutsik dago!)
 ```
 
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
@@ -376,8 +380,8 @@ Kodea ez errepikatzeaz gain, funtzio batek aukera ematen digu kode berak hainbat
 
 ```python
 def agurtu (agurra, batzuetan):
-for i in range (batzuetan):
-print (agurra)
+  for i in range (batzuetan):
+    print (agurra)
 ```
 
 Balio desberdinekin dei dakioke:
@@ -422,18 +426,18 @@ Edonork idatz ditzake funtzioak eta kodea zati txikitan taldekatu. Baina pro gis
 Idatzi bi zenbaki jasotzen dituen funtzio bat, detektatu zein den handiena eta erakutsi horien arteko aldea.
 
 ```python
-def diferentzia (1. balorazioa, 2. balorazioa):
-diferentzia = 0
+def diferentzia (balio1, balio2):
+    kenketa = 0
 
-if balorazioa > 2. balorazioa:
-diferentzia = 1. balorazioa - 2. balorazioa
-LKse:
-diferentzia = 2. balorazioa - 1. balorazioa
+    if balio1 > balio2:
+        kenketa = balio1 - balio2
+    else:
+        kenketa = balio2 - balio1
 
-print ("Diferentzia da:", diferentzia)
+    print("Diferentzia da: ", kenketa)
 
-aldea (10, 5)
-aldea (4, 12)
+diferentzia(10, 5)
+diferentzia(4, 12)
 ```
 
 Emaitza:
@@ -448,21 +452,21 @@ Aldea hau da: 8
 Idatzi bi zenbaki eta eragiketa-zeinu aritmetiko bat jasotzen dituen programa bat: +, -,*, /. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
 
 ```python
-def kalkula (1, 2, op):
-if op = "+": return valor1 + valor2
-elif op = "-": return valor1 - valor2
-elif op = = "*": return valor1* valor2
-elif op = = "/": return valor1/valor2
-else: return "Eragiketa ezezaguna"
+def kalkulatu (balioa1, balioa2, eragiketa):
+    if eragiketa ==  "+": return balioa1 + balioa2
+    elif eragiketa == "-": return balioa1 - balioa2
+    elif eragiketa == "*": return balioa1 * balioa2
+    elif eragiketa == "/": return balioa1 / balioa2
+    else: return "Eragiketa ezezaguna"
 
-emaitza = kalkulatu (4, 6, "*")
-print (emaitza)
+emaitza = kalkulatu(4, 6, "*")
+print(emaitza)
 
-emaitza = kalkulatu (5, 5, "-")
-print (emaitza)
+emaitza = kalkulatu(5, 5, "-")
+print(emaitza)
 
-emaitza = kalkulatu (4, 3, "@")
-print (emaitza)
+emaitza = kalkulatu(4, 3, "@")
+print(emaitza)
 ```
 
 Emaitza:
@@ -480,22 +484,27 @@ Eragiketa ezezaguna
 Funtzio honek parametro gisa eguneko une bat hartzen du: "goiz", "arratsalde" edo "gau", eta dagokion agurra itzuli behar du: "Egun on", "Arratsalde on", eta "Gau on", hurrenez hurren.
 
 ```python
-def agurra (unea):
-if momento = = "mañana": return "Buenos días"
-elif momento = = "tarde": return "Buenas tardes"
-elif momento = = "noche": return "Gabon"
-else: return ""
+def agurtu(momentua):
+    if momentua == "goizean":
+        return "Egun on"
+    elif momentua == "arratsaldean":
+        return "Arratsalde on"
+    elif momentua == "gauero":
+        return "Gabon on"
+    else:
+        return ""
 
-print (agurra ("arratsaldez"))
+print(eskerrik_asko("arratsaldean"))
 
-def saludo2 (unea):
-return {
-"Bihar": "Egun on",
-"Arratsaldez": "Arratsaldeon",
-"Gaua": "Gabon"
-} [unea]
+# beste bertsio bat
+def agurtu2(momentua):
+    return {
+        "goizean": "Egun on",
+        "arratsaldean": "Arratsalde on",
+        "gauero": "Gabon on"
+    }[momentua]
 
-print (osasuna2 ("arratsaldez"))
+print(eskerrik_asko2("arratsaldean"))
 ```
 
 Emaitza:
@@ -512,16 +521,16 @@ Arratsalde on.
 Funtzio honek array zenbakien elementu guztiak parametro gisa pasatzen dugun zenbakiarekin hasi behar ditu.
 
 ```python
-defEkinZenbakiarekin (luzera, zenbakia):
-zenbakiak = []
-for i in range (luzera):
-ugari.append (kopurua)
-zenbakien erreturn
+def hasieratuZenbakiarekin(luzera, zenbakia):
+    zenbakiak = []
+    for i in range(luzera):
+        zenbakiak.append(zenbakia)
+    return zenbakiak
 
-def hasiConNumero1 (luzera, zenbakia): return [zenbakia]* luzera
+def hasieratuZenbakiarekin2(luzera, zenbakia): return [zenbakia] * luzera
 
-print (hasiZenbakiarekin (10, 3))
-print (hasiConNumero1 (10, 3))
+print(hasieratuZenbakiarekin(10, 3))
+print(hasieratuZenbakiarekin(10, 3))
 ```
 
 Emaitza:
@@ -540,10 +549,10 @@ Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausa
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max)
+def ausazkoa (max):
+    return random.randint(0, max)
 
-print (ausazkoa (5))
+print(ausazkoa(5))
 ```
 
 Emaitza:
@@ -561,22 +570,22 @@ Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat (kontsonan
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max - 1)
+def ausazkoa(max):
+    return random.randint(0, max - 1)
 
-def crearIzena (silabak):
-bokalak = ["a", "e", "i", "o", "u"]
-kontsonanteak = ["b", "c", "d", "f", "g", "h", "j", "k", "l", "m", "n", "ñ", "p", "q", "r", "s", "t", "v", "w", "x", "y", "z"]
-izena = "
+def izenaSortu(silabak):
+    oinak = ["a", "e", "i", "o", "u"]
+    konsonanteak = ["b","c","d","f","g","h","j","k","l","m","n","ñ","p","q","r","s","t","v","w","x","y","z"]
+    izena = ""
 
-for i in range (silabas):
-kontsonantea = kontsonanteak [ausazkoa (len (kontsonanteak))]
-bokala = bokalak [aleatorioa (len (bokalak))]
-izena = izena + kontsonantea + bokala
+    for i in range(silabak):
+        konsonantea = konsonanteak[ausazkoa(len(konsonanteak))]
+        oina = oinak[ausazkoa(len(oinak))]
+        izena = izena + konsonantea + oina
 
-return izena
+    return izena
 
-print (sortu izena (3))
+print(izenaSortu(3))
 ```
 
 Emaitza:
@@ -594,22 +603,23 @@ Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. 
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max - 1)
+def ausazkoa (max):
+    return random.randint(0, max - 1)
 
-def crearPassword (luzera):
-karaktereak = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l",
-"m", "n", "ñ", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z",
-"0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ".", "-", "_", "!", "$"]
-pasahitza = ""
+def pasahitzaSortu (luzera):
+    hizkiak = ["a","b","c","d","e","f","g","h","i","j","k","l",
+        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
+        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
+    pasahitza = ""
 
-for i in range (luzera):
-caracter = karaktereak [ausazkoa (len (karaktereak))]
-password = password + caracter
+    for i in range(luzera):
+        hizkia = hizkiak[aleatorio(len(hizkiak))]
+        pasahitza = pasahitza + hizkia
 
-return password
+    return pasahitza
 
-print (sortuPassword (8))
+
+print(pasahitzaSortu(8))
 ```
 
 Emaitza:
@@ -629,25 +639,26 @@ Sortu `faktura 'izeneko funtzioa (produktuak, kopuruak, prezioak), tamaina berek
 Funtzioak produktu bakoitza zeharkatu eta guztizko prezioa kalkulatu behar du, kantitatearen eta prezioaren arabera. Produktu bakoitzaren guztizko prezio hori erakutsi behar da, eta programaren amaieran, guztizko prezioa erakutsi behar da.
 
 ```python
-def faktura (produktuak, kopuruak, prezioak):
-faktura = "FAKTURA\n-------------------\n"
-guztira = 0
+def faktura(produktuak, kantitateak, prezioak):
+    faktura = "FAKTURA\n-------------------\n"
+    totala = 0
 
-for i in range (len (produktuak)):
-faktura = faktura + produktuak [i]
-faktura = faktura + "x" + str (kopuruak [i])
-faktura = faktura + ":" + str (prezioak [i]) + "\n"
+    for i in range(len(produktuak)):
+        faktura = faktura + produktuak[i]
+        faktura = faktura + " x " + str(kantitateak[i])
+        faktura = faktura + " : " + str(prezioak[i]) + "\n"
 
-guztira = guztira + (kopuruak [i]* prezioak [i])
+        totala = totala + (kantitateak[i] * prezioak[i])
 
-faktura = faktura + "\n-----------------------\n"
-faktura = faktura + "Guztira:" + str (guztira)
+    faktura = faktura + "\n-----------------------\n"
+    faktura = faktura + "Totala: " + str(totala)
 
-fakturaren erreturn
+    return faktura
 
-#Deiaren adibidea
-Faktura, guztira = faktura (["Ogia", "Arrautzak", "Irina"], [1,6,2], [1.2, 0.2, 0.8])
-print (guztiraFaktura)
+
+# Deituriko adibidea
+totalFaktura = faktura(["Ogi","Arrautza","Hirina"],[1,6,2],[1.2, 0.2, 0.8])
+print(totalFaktura)
 ```
 
 Emaitza:
@@ -676,41 +687,42 @@ Azkenean, programak esleitutako puntuen laburpena erakutsi behar du.
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max)
+def ausazkoa (maximoa):
+    return random.randint(0, maximoa)
 
-def crearAtributuak (mailaKonpentsazioa):
-darPuntosA = 0
-adimena = 0
-indarra = 0
-abiadura = 0
+def atributuakSortu(konpentsaketaMaila):
+    puntuakEman = 0
+    adimena = 0
+    indarra = 0
+    abiadura = 0
 
-gainerako puntuak = 20
-puntu = 0
+    gainontzekoPuntuak = 20
+    puntuak = 0
 
-while puntuak > 0:
-if mailaKonpentsazioa > puntuakGainerakoak:
-puntuak = puntuakGainerakoak
-Gainerako puntuak = 0
-LKse:
-puntuak = ausazkoa (mailaKonpentsazioa+1)
-gainerakoak = puntuakGainerakoak - puntuak
+    while gainontzekoPuntuak > 0:
+        if nivel_compensación > gainontzekoPuntuak:
+            puntuak = gainontzekoPuntuak
+            gainontzekoPuntuak = 0
+        else:
+            puntuak = aleatorio(konpentsaketaMaila+1)
+            gainontzekoPuntuak = gainontzekoPuntuak - puntuak
 
-darPuntosA = ausazkoa (3)
+        puntuakEman = aleatorio(3)
 
-if darPuntosA = = 0:
-adimena = adimena + puntuak
-elif darPuntosA = = 1:
-indarra = indarra + puntuak
-elif darPuntosA = = 2:
-abiadura = abiadura + puntuak
+        if puntuakEman == 0:
+            adimena = adimena + puntuak
+        elif puntuakEman == 1:
+            indarra = indarra + puntuak
+        elif puntuakEman == 2:
+            abiadura = abiadura + puntuak
 
-print ("\nKonpentsazio bidez esleitutako balioak:", mailaKonpentsazioa)
-print ("Adimena:", adimena)
-print ("Indarra:", indarra)
-print ("Abiadura:", abiadura)
+    print("\nBalioak konpentsazioaren arabera adierazita: ", konpentsaketaMaila)
+    print("Adimena: ", adimena)
+    print("Indarra: ", indarra)
+    print("Abiadura: ", abiadura)
 
-Atributuak sortu (3)
+
+atributuakSortu(3)
 
 ```
 
